# smart-csv

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  cabal.project  cabal.project.freeze  docker-compose.yaml  flake.nix  fourmolu.yaml  sqitch.conf
.github/workflows/: ci.yml
_dev/: setup-db.sh  smart-csv-runner-gcs.sh  smart-csv-runner.sh
database/: sqitch.plan
database/deploy/: column_config.sql  extensions.sql  job_queue_functions.sql  job_queue_tables.sql  job_queue_triggers.sql  query_range_limit.sql  reference_tables.sql  schemas.sql  smart_csv_functions.sql  smart_csv_statechart.sql  smart_csv_tables.sql  smart_csv_triggers.sql
database/revert/: column_config.sql  extensions.sql  job_queue_functions.sql  job_queue_tables.sql  job_queue_triggers.sql  query_range_limit.sql  reference_tables.sql  schemas.sql  smart_csv_functions.sql  smart_csv_statechart.sql  smart_csv_tables.sql  smart_csv_triggers.sql
docker/postgres/: Dockerfile  init.sql
docs/: api.md  column-presets.md
nix/: extract-ghc-options.awk
smart-csv/: smart-csv.cabal
smart-csv-runner/: LICENSE  smart-csv-runner.cabal
smart-csv-runner/app/: Main.hs
smart-csv-runner/src/JobSchemas/: GenerateSettlementCsv.hs  SmartGraphqlCsvGenerate.hs
smart-csv-runner/src/Kronor/: CircuitBreaker.hs  Db.hs  Http.hs  Logger.hs  Tracer.hs
smart-csv-runner/src/Kronor/Db/Error/: Common.hs
smart-csv-runner/src/Kronor/Db/Models/: Shard.hs
smart-csv-runner/src/Kronor/Db/Types/: Bigint.hs
smart-csv-runner/src/SmartCsvApi/: Auth.hs  Env.hs  RestServer.hs
smart-csv-runner/src/SmartCsvApi/Db/: Statements.hs
smart-csv-runner/src/SmartCsvApi/Handler/: SmartGraphqlCsvGenerator.hs
smart-csv-runner/src/SmartCsvApi/Types/: SmartGraphqlCsvGenerator.hs
smart-csv-runner/src/SmartCsvApi/Validation/: SmartGraphqlCsvGenerator.hs
smart-csv-runner/src/SmartCsvRunner/: AWS.hs  Cli.hs  Dequeuer.hs  Dispatcher.hs  Env.hs  Job.hs  MultipartUpload.hs  ReportLink.hs  ThreadManager.hs
smart-csv-runner/src/SmartCsvRunner/AWS/: S3.hs  Types.hs
smart-csv-runner/src/SmartCsvRunner/CsvGeneration/: Generate.hs
smart-csv-runner/src/SmartCsvRunner/Job/: Payload.hs  SmartCsvEnv.hs  Type.hs
smart-csv-runner/src/SmartCsvRunner/JobHandlers/: Email.hs  SmartGenerateCsv.hs
smart-csv-runner/test/Test/: SmartCsvRunner.hs
smart-csv-runner/test/Test/SmartCsvRunner/: Integration.hs
smart-csv/src/Kronor/SmartCsv/: ColumnConfig.hs  ErrorHandling.hs  Flatten.hs  Notification.hs  Pagination.hs  Query.hs  Statements.hs  TokenClaims.hs  Validation.hs
smart-csv/test/Test/Kronor/: SmartCsv.hs
