cabal-version:      2.2
name:               smart-csv
version:            0.1.0.0
description:        Smart CSV extraction primitives
homepage:           https://github.com/kronor-io/smart-csv#readme
bug-reports:        https://github.com/kronor-io/smart-csv/issues
author:             Kronor Team
maintainer:         dev@kronor.io
copyright:          2026 Kronor
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/kronor-io/smart-csv

flag lint
  description: lint
  manual:      True
  default:     False

flag prod
  description: prod
  manual:      True
  default:     False

common common-component-settings
  if flag(prod)
    ghc-options: -O2

  else
    ghc-options: -O0

  if flag(lint)
    ghc-options: -Werror

  default-language: GHC2024
  default-extensions:
      RecordWildCards
    , ScopedTypeVariables
    , TemplateHaskell
    , ApplicativeDo
    , BlockArguments
    , DataKinds
    , DeepSubsumption
    , DefaultSignatures
    , DeriveAnyClass
    , DerivingStrategies
    , DerivingVia
    , DuplicateRecordFields
    , FunctionalDependencies
    , GADTs
    , LambdaCase
    , MultiWayIf
    , NoImplicitPrelude
    , OverloadedRecordDot
    , OverloadedStrings
    , PackageImports
    , PartialTypeSignatures
    , PatternSynonyms
    , QuasiQuotes
    , StrictData
    , TypeFamilies
    , ViewPatterns

library
  import: common-component-settings
  exposed-modules:
    Kronor.SmartCsv.ColumnConfig
    Kronor.SmartCsv.ErrorHandling
    Kronor.SmartCsv.Flatten
    Kronor.SmartCsv.Notification
    Kronor.SmartCsv.Pagination
    Kronor.SmartCsv.Query
    Kronor.SmartCsv.Statements
    Kronor.SmartCsv.TokenClaims
    Kronor.SmartCsv.Validation

  other-modules:    Paths_smart_csv
  hs-source-dirs:   src
  build-depends:
      aeson
    , base                   >=4.11     && <10
    , bytestring
    , cassava
    , containers
    , hasql
    , hasql-th
    , morpheus-graphql-core
    , rio                    >=0.1.12.0
    , time
    , vector

test-suite smart-csv-test
  import: common-component-settings
  type:             exitcode-stdio-1.0
  ghc-options:      -main-is Test.Kronor.SmartCsv.main
  main-is:          Test/Kronor/SmartCsv.hs
  hs-source-dirs:   test
  build-depends:
      aeson
    , base                     >=4.11     && <10
    , cassava
    , containers
    , smart-csv
    , morpheus-graphql-core
    , rio                      >=0.1.12.0
    , tasty
    , tasty-hunit
    , vector

